--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td> <img src="C:\study\web development\HTML- personal site\img\41237152_850590771998387_415682895005351936_n-photoaidcom-cropped.jpg" alt="Ashu's Profile Picture"
+            <td> <img src="img/41237152_850590771998387_415682895005351936_n-photoaidcom-cropped.jpg" alt="Ashu's Profile Picture"
                 height="200"
                 width="200"/></td>
                 <td><h1>Ashutosh Bhatt</h1>
